--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "typo3/cms-viewpage": "^9.5",
         "cweagans/composer-patches": "^1.6",
         "hof-express/restaurant": "^1.0",
-        "travislykes/hof-express-app": "dev-master"
+        "travislykes/hof-express-app": "dev-master",
+        "typo3/cms-felogin": "^9.5"
     },
     "repositories": {
         "local": {
